Increase configuration item height to prevent cut off letters

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,5 +20,5 @@ $colors: (
   burgundy: #83262E
 );
 
-$configuration-item-height: 20px;
+$configuration-item-height: 22px;
 $configuration-item-height-big: 40px;
